--- a/releases/v0.1.7/006_deployment.yaml
+++ b/releases/v0.1.7/006_deployment.yaml
@@ -1,10 +1,10 @@
-apiVersion:  apps/v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    deployment.kubernetes.io/revision: "1"
+    deployment.kubernetes.io/revision: '1'
   labels:
-    app.kubernetes.io/name: ibmcloud-operators  
+    app.kubernetes.io/name: ibmcloud-operators
   name: ibmcloud-operator
   namespace: ibmcloud-operators
 spec:
@@ -21,16 +21,16 @@ spec:
     spec:
       containers:
       - args:
-        - "-logtostderr=true"
-        - "-v=5"
+        - -logtostderr=true
+        - -v=5
         command:
         - ./manager
-        image: PLACEHOLDER
-        imagePullPolicy: Always
-        name: ibmcloud-controllers
-        env: 
+        env:
         - name: CONTROLLER_NAMESPACE
           valueFrom:
             fieldRef:
               fieldPath: metadata.namespace
+        image: cloudoperators/ibmcloud-operator:0.1.7
+        imagePullPolicy: Always
+        name: ibmcloud-controllers
       serviceAccountName: ibmcloud-operator
