Support for usernames in log messages
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/config/crds/ibmcloud_v1alpha1_service.yaml
+++ b/config/crds/ibmcloud_v1alpha1_service.yaml
@@ -51,6 +51,8 @@ spec:
                   type: string
                 space:
                   type: string
+                user:
+                  type: string
               type: object
             externalName:
               type: string
@@ -111,6 +113,8 @@ spec:
                 resourcelocation:
                   type: string
                 space:
+                  type: string
+                user:
                   type: string
               type: object
             externalName:
