--- a/releases/v0.1.8/001_ibmcloud_v1alpha1_binding.yaml
+++ b/releases/v0.1.8/001_ibmcloud_v1alpha1_binding.yaml
@@ -4,7 +4,7 @@ metadata:
   creationTimestamp: null
   labels:
     controller-tools.k8s.io: "1.0"
-  name: services.ibmcloud.ibm.com
+  name: bindings.ibmcloud.ibm.com
 spec:
   additionalPrinterColumns:
   - JSONPath: .status.state
@@ -15,8 +15,8 @@ spec:
     type: date
   group: ibmcloud.ibm.com
   names:
-    kind: Service
-    plural: services
+    kind: Binding
+    plural: bindings
   scope: Namespaced
   subresources:
     status: {}
@@ -37,24 +37,7 @@ spec:
           type: object
         spec:
           properties:
-            context:
-              properties:
-                org:
-                  type: string
-                region:
-                  type: string
-                resourcegroup:
-                  type: string
-                resourcegroupid:
-                  type: string
-                resourcelocation:
-                  type: string
-                space:
-                  type: string
-                user:
-                  type: string
-              type: object
-            externalName:
+            alias:
               type: string
             parameters:
               items:
@@ -84,92 +67,32 @@ spec:
                 - name
                 type: object
               type: array
-            plan:
+            role:
               type: string
-            serviceClass:
+            secretName:
               type: string
-            serviceClassType:
+            serviceName:
               type: string
-            tags:
-              items:
-                type: string
-              type: array
+            serviceNamespace:
+              type: string
           required:
-          - serviceClass
-          - plan
+          - serviceName
           type: object
         status:
           properties:
-            context:
-              properties:
-                org:
-                  type: string
-                region:
-                  type: string
-                resourcegroup:
-                  type: string
-                resourcegroupid:
-                  type: string
-                resourcelocation:
-                  type: string
-                space:
-                  type: string
-                user:
-                  type: string
-              type: object
-            externalName:
-              type: string
             generation:
               format: int64
               type: integer
             instanceId:
               type: string
+            keyInstanceId:
+              type: string
             message:
               type: string
-            parameters:
-              items:
-                properties:
-                  attributes:
-                    description: A parameter may have attributes (e.g. message hub
-                      topic might have partitions)
-                    type: object
-                  name:
-                    description: Name representing the key.
-                    type: string
-                  value:
-                    description: Defaults to null.
-
-                  valueFrom:
-                    description: Source for the value. Cannot be used if value is
-                      not empty.
-                    properties:
-                      configMapKeyRef:
-                        description: Selects a key of a ConfigMap.
-                        type: object
-                      secretKeyRef:
-                        description: Selects a key of a secret in the resource namespace
-                        type: object
-                    type: object
-                required:
-                - name
-                type: object
-              type: array
-            plan:
-              type: string
-            serviceClass:
-              type: string
-            serviceClassType:
+            secretName:
               type: string
             state:
               type: string
-            tags:
-              items:
-                type: string
-              type: array
-          required:
-          - serviceClass
-          - serviceClassType
-          - plan
           type: object
   version: v1alpha1
 status:
