--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ script:
 after_success:
   - make push
   - test "$TRAVIS_EVENT_TYPE" != "pull_request" && make docker-build || echo "success"
+  - bash <(curl -s https://codecov.io/bash)
 
 #  build only master and tagged/branch releases.
 branches:
