--- a/config/samples/translator-binding.yaml
+++ b/config/samples/translator-binding.yaml
@@ -5,3 +5,6 @@ metadata:
 spec:
   serviceName: mytranslator
   secretName: translator-secret
+  parameters:
+  - name: serviceid_crn
+    value: crn:v1:bluemix:public:iam-identity::a/bf384e9f77ea0cd3b2268cbc7a5edba1::serviceid:ServiceId-2706cb27-2031-4167-882a-24680f35d749
