--- a/config/samples/translator-bindonly.yaml
+++ b/config/samples/translator-bindonly.yaml
@@ -1,8 +1,9 @@
 apiVersion: ibmcloud.ibm.com/v1alpha1
 kind: Service
 metadata:
-  name: mytranslator
+  name: mytranslator-alias
   namespace: default
 spec:
   plan: Alias
   serviceClass: language-translator
+  externalName: mytranslator
