support for dashboard url
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/config/crds/ibmcloud_v1alpha1_service.yaml
+++ b/config/crds/ibmcloud_v1alpha1_service.yaml
@@ -117,6 +117,8 @@ spec:
                 user:
                   type: string
               type: object
+            dashboardURL:
+              type: string
             externalName:
               type: string
             generation:
