fix for URL dashboard
Signed-off-by: Mandana Vaziri <mvaziri@us.ibm.com>

--- a/olm/0.1.11/ibmcloud_operator.v0.1.11.clusterserviceversion.yaml
+++ b/olm/0.1.11/ibmcloud_operator.v0.1.11.clusterserviceversion.yaml
@@ -8,7 +8,7 @@ metadata:
     categories: Cloud Provider
     certified: 'false'
     containerImage: cloudoperators/ibmcloud-operator:0.1.11
-    createdAt: '2020-06-25T14:57:01Z'
+    createdAt: '2020-06-25T20:38:46Z'
     description: The IBM Cloud Operator provides a Kubernetes CRD-Based API to manage
       the lifecycle of IBM public cloud services.
     repository: https://github.com/IBM/cloud-operators
@@ -52,41 +52,10 @@ spec:
         path: externalName
         x-descriptors:
         - urn:alm:descriptor:text
-      - description: Parameters for the service
-        displayName: Parameters
-        path: parameters
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Tags for the service
-        displayName: Tags
-        path: tags
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Current context for the service (resource group, resource group
-          ID, user, region, org, space)
-        displayName: Context
-        path: context
-        x-descriptors:
-        - urn:alm:descriptor:text
       statusDescriptors:
       - description: Detailed message on current status
         displayName: Message
         path: message
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Current plan for service
-        displayName: Plan
-        path: plan
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Current service class
-        displayName: Service Class
-        path: serviceClass
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Current ServiceClassType, set to CF if the service is CloundFoundry
-        displayName: ServiceClassType
-        path: serviceClassType
         x-descriptors:
         - urn:alm:descriptor:text
       - description: Current state for the service
@@ -94,37 +63,16 @@ spec:
         path: state
         x-descriptors:
         - urn:alm:descriptor:text
-      - description: Current context for the service (resource group, resource group
-          ID, user, region, org, space)
-        displayName: Context
-        path: context
-        x-descriptors:
-        - urn:alm:descriptor:text
       - description: Instance ID for the service
         displayName: Instance ID
         path: instanceId
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: ExternalName for the service as it appears on IBM Cloud
-        displayName: ExternalName
-        path: externalName
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Parameters for the service
-        displayName: Parameters
-        path: parameters
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Tags for the service
-        displayName: Tags
-        path: tags
         x-descriptors:
         - urn:alm:descriptor:text
       - description: DashboardURL for the service
         displayName: DashboardURL
         path: dashboardURL
         x-descriptors:
-        - urn:alm:descriptor:text
+        - urn:alm:descriptor:org.w3:link
       version: v1alpha1
     - description: Represents an instance of a service binding resource on IBM Cloud.
         A Binding creates a secret with the service instance credentials.
@@ -164,11 +112,6 @@ spec:
       - description: Alias for the credentials to be aliased
         displayName: Alias
         path: alias
-        x-descriptors:
-        - urn:alm:descriptor:text
-      - description: Parameters for the binding
-        displayName: Parameters
-        path: parameters
         x-descriptors:
         - urn:alm:descriptor:text
       statusDescriptors:
