Switch to v1beta1
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -43,9 +43,9 @@ spec:
           description: BindingStatus defines the observed state of Binding
           type: object
       type: object
-  version: v1
+  version: v1beta1
   versions:
-  - name: v1
+  - name: v1beta1
     served: true
     storage: true
 status:
