Copy over Binding fields, use json.RawMessage in place of runtime.RawExtention
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -34,10 +34,83 @@ spec:
         spec:
           description: BindingSpec defines the desired state of Binding
           properties:
-            foo:
-              description: Foo is an example field of Binding. Edit Binding_types.go
-                to remove/update
+            alias:
               type: string
+            parameters:
+              items:
+                description: KeyValue represents a key-value pair
+                properties:
+                  attributes:
+                    additionalProperties:
+                      description: RawMessage is a raw encoded JSON value. It implements
+                        Marshaler and Unmarshaler and can be used to delay JSON decoding
+                        or precompute a JSON encoding.
+                      format: byte
+                      type: string
+                    description: A parameter may have attributes (e.g. message hub
+                      topic might have partitions)
+                    type: object
+                  name:
+                    description: Name representing the key.
+                    type: string
+                  value:
+                    description: Defaults to null.
+                    format: byte
+                    type: string
+                  valueFrom:
+                    description: Source for the value. Cannot be used if value is
+                      not empty.
+                    properties:
+                      configMapKeyRef:
+                        description: Selects a key of a ConfigMap.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the ConfigMap or its key
+                              must be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                      secretKeyRef:
+                        description: Selects a key of a secret in the resource namespace
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                    type: object
+                required:
+                - name
+                type: object
+              type: array
+            role:
+              type: string
+            secretName:
+              type: string
+            serviceName:
+              type: string
+            serviceNamespace:
+              type: string
+          required:
+          - serviceName
           type: object
         status:
           description: BindingStatus defines the observed state of Binding
