Copy remaining type info for CRDs
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -34,13 +34,223 @@ spec:
         spec:
           description: ServiceSpec defines the desired state of Service
           properties:
-            foo:
-              description: Foo is an example field of Service. Edit Service_types.go
-                to remove/update
+            context:
+              properties:
+                org:
+                  type: string
+                region:
+                  type: string
+                resourcegroup:
+                  type: string
+                resourcegroupid:
+                  type: string
+                resourcelocation:
+                  type: string
+                space:
+                  type: string
+                user:
+                  type: string
+              type: object
+            externalName:
               type: string
+            parameters:
+              items:
+                description: KeyValue represents a key-value pair
+                properties:
+                  attributes:
+                    additionalProperties:
+                      description: RawMessage is a raw encoded JSON value. It implements
+                        Marshaler and Unmarshaler and can be used to delay JSON decoding
+                        or precompute a JSON encoding.
+                      format: byte
+                      type: string
+                    description: A parameter may have attributes (e.g. message hub
+                      topic might have partitions)
+                    type: object
+                  name:
+                    description: Name representing the key.
+                    type: string
+                  value:
+                    description: Defaults to null.
+                    format: byte
+                    type: string
+                  valueFrom:
+                    description: Source for the value. Cannot be used if value is
+                      not empty.
+                    properties:
+                      configMapKeyRef:
+                        description: Selects a key of a ConfigMap.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the ConfigMap or its key
+                              must be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                      secretKeyRef:
+                        description: Selects a key of a secret in the resource namespace
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                    type: object
+                required:
+                - name
+                type: object
+              type: array
+            plan:
+              type: string
+            serviceClass:
+              type: string
+            serviceClassType:
+              type: string
+            tags:
+              items:
+                type: string
+              type: array
+          required:
+          - plan
+          - serviceClass
           type: object
         status:
           description: ServiceStatus defines the observed state of Service
+          properties:
+            apiVersion:
+              description: 'APIVersion defines the versioned schema of this representation
+                of an object. Servers should convert recognized schemas to the latest
+                internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
+              type: string
+            context:
+              properties:
+                org:
+                  type: string
+                region:
+                  type: string
+                resourcegroup:
+                  type: string
+                resourcegroupid:
+                  type: string
+                resourcelocation:
+                  type: string
+                space:
+                  type: string
+                user:
+                  type: string
+              type: object
+            dashboardURL:
+              type: string
+            externalName:
+              type: string
+            generation:
+              format: int64
+              type: integer
+            instanceId:
+              type: string
+            kind:
+              description: 'Kind is a string value representing the REST resource
+                this object represents. Servers may infer this from the endpoint the
+                client submits requests to. Cannot be updated. In CamelCase. More
+                info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+              type: string
+            parameters:
+              items:
+                description: KeyValue represents a key-value pair
+                properties:
+                  attributes:
+                    additionalProperties:
+                      description: RawMessage is a raw encoded JSON value. It implements
+                        Marshaler and Unmarshaler and can be used to delay JSON decoding
+                        or precompute a JSON encoding.
+                      format: byte
+                      type: string
+                    description: A parameter may have attributes (e.g. message hub
+                      topic might have partitions)
+                    type: object
+                  name:
+                    description: Name representing the key.
+                    type: string
+                  value:
+                    description: Defaults to null.
+                    format: byte
+                    type: string
+                  valueFrom:
+                    description: Source for the value. Cannot be used if value is
+                      not empty.
+                    properties:
+                      configMapKeyRef:
+                        description: Selects a key of a ConfigMap.
+                        properties:
+                          key:
+                            description: The key to select.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the ConfigMap or its key
+                              must be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                      secretKeyRef:
+                        description: Selects a key of a secret in the resource namespace
+                        properties:
+                          key:
+                            description: The key of the secret to select from.  Must
+                              be a valid secret key.
+                            type: string
+                          name:
+                            description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                              TODO: Add other useful fields. apiVersion, kind, uid?'
+                            type: string
+                          optional:
+                            description: Specify whether the Secret or its key must
+                              be defined
+                            type: boolean
+                        required:
+                        - key
+                        type: object
+                    type: object
+                required:
+                - name
+                type: object
+              type: array
+            plan:
+              type: string
+            serviceClass:
+              type: string
+            serviceClassType:
+              type: string
+            tags:
+              items:
+                type: string
+              type: array
+          required:
+          - plan
+          - serviceClass
+          - serviceClassType
           type: object
       type: object
   version: v1beta1
