Refactor KeyValue into Param
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_bindings.yaml
@@ -38,7 +38,7 @@ spec:
               type: string
             parameters:
               items:
-                description: KeyValue represents a key-value pair
+                description: Param represents a key-value pair
                 properties:
                   attributes:
                     additionalProperties:
