--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -55,7 +55,7 @@ spec:
               type: string
             parameters:
               items:
-                description: KeyValue represents a key-value pair
+                description: Param represents a key-value pair
                 properties:
                   attributes:
                     additionalProperties:
@@ -174,7 +174,7 @@ spec:
               type: string
             parameters:
               items:
-                description: KeyValue represents a key-value pair
+                description: Param represents a key-value pair
                 properties:
                   attributes:
                     additionalProperties:
