--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -4,7 +4,7 @@ apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.2.5
+    controller-gen.kubebuilder.io/version: v0.3.1-0.20200517180335-820a4a27ea84
   creationTimestamp: null
   name: services.ibmcloud.ibm.com
 spec:
@@ -61,11 +61,7 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      description: RawMessage is a raw encoded JSON value. It implements
-                        Marshaler and Unmarshaler and can be used to delay JSON decoding
-                        or precompute a JSON encoding.
-                      format: byte
-                      type: string
+                      type: Any
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -74,8 +70,7 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    format: byte
-                    type: string
+                    type: Any
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
@@ -182,11 +177,7 @@ spec:
                 properties:
                   attributes:
                     additionalProperties:
-                      description: RawMessage is a raw encoded JSON value. It implements
-                        Marshaler and Unmarshaler and can be used to delay JSON decoding
-                        or precompute a JSON encoding.
-                      format: byte
-                      type: string
+                      type: Any
                     description: A parameter may have attributes (e.g. message hub
                       topic might have partitions)
                     type: object
@@ -195,8 +186,7 @@ spec:
                     type: string
                   value:
                     description: Defaults to null.
-                    format: byte
-                    type: string
+                    type: Any
                   valueFrom:
                     description: Source for the value. Cannot be used if value is
                       not empty.
