Add service controller code
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/config/crd/bases/ibmcloud.ibm.com_services.yaml
+++ b/config/crd/bases/ibmcloud.ibm.com_services.yaml
@@ -129,11 +129,6 @@ spec:
         status:
           description: ServiceStatus defines the observed state of Service
           properties:
-            apiVersion:
-              description: 'APIVersion defines the versioned schema of this representation
-                of an object. Servers should convert recognized schemas to the latest
-                internal value, and may reject unrecognized values. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#resources'
-              type: string
             context:
               description: ResourceContext defines the CloudFoundry context and resource
                 group
@@ -162,11 +157,7 @@ spec:
               type: integer
             instanceId:
               type: string
-            kind:
-              description: 'Kind is a string value representing the REST resource
-                this object represents. Servers may infer this from the endpoint the
-                client submits requests to. Cannot be updated. In CamelCase. More
-                info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#types-kinds'
+            message:
               type: string
             parameters:
               items:
@@ -232,6 +223,8 @@ spec:
             serviceClass:
               type: string
             serviceClassType:
+              type: string
+            state:
               type: string
             tags:
               items:
