Add service controller tests, refactor common utilities
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/controllers/testdata/cos.yaml
+++ b/controllers/testdata/cos.yaml
@@ -1,7 +1,9 @@
 apiVersion: ibmcloud.ibm.com/v1beta1
 kind: Service
 metadata:
-  name: test-translator-1
+  name: mycos
 spec:
   plan: standard
-  serviceClass: language-translator
+  serviceClass: cloud-object-storage
+  context:
+    region: global
