Extend lint timeout due to low concurrency in Travis
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,3 +1,7 @@
+run:
+  # Extend default timeout for running in single-core CI
+  timeout: 2m
+
 linters:
   enable:
     # Default linters plus these:
