Improve docs for CRD types, add CRDs to OLM output
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -66,4 +66,5 @@ spec:
       deployments: 
       - {{.DeploymentSpec | yaml | indent 8 | trimSpace}}
   customresourcedefinitions:
-    owned: # PLACEHOLDER
+    owned:
+      {{.CRDs | yaml | indent 6 | trimSpace}}
