Improve docs, add "resources:" sections to OLM
Signed-off-by: John Starich <johnstarich@johnstarich.com>

--- a/internal/cmd/genolm/templates/clusterserviceversion.yaml
+++ b/internal/cmd/genolm/templates/clusterserviceversion.yaml
@@ -4,7 +4,8 @@ metadata:
   name: {{.Name}}.v{{.Version}}
   namespace: placeholder
   annotations:
-    alm-examples: {{.Examples | json}}
+    alm-examples: |-
+      {{.Examples | json | indent 6 | trimSpace}}
     capabilities: Basic Install
     categories: Cloud Provider
     certified: "false"
